``pkginfo`` Changelog
=====================

1.11.0 (unreleased)
-------------------

- Improve exception message when failing to find a valid 'PKG-INFO' file
  within an 'sdist' archive.  LP #2064652.

1.10.0 (2024-03-03)
-------------------

- Add support for Python 3.11 and 3.12.

- Drop support for Python 3.6.

- Declare explicit testing dependency on 'wheel'.

- Add support for Metadata 2.3.


1.9.6 (2023-01-08)
------------------

- Fix various typos in docs / docstrings.  LP #2002232.

1.9.5 (2023-01-06)
------------------

- Add stricter typing checks, matching those used in 'twine'.

- Fix typing errors / gaps reported from 'twine' CI failure.  LP #2002104.

1.9.4 (2023-01-05)
------------------

- Fix packaging of stub file for Python typing support.

1.9.3 (2023-01-03)
------------------

- Added stub files for Python typing support;  verify using 'mypy'. LP #1876591.

1.9.2 (2022-11-29)
------------------

- Drop "universal" wheel support (should be redundant with
  'python_requires >= 3.6', but just in case).  LP #1998258.

1.9.1 (2022-11-29)
------------------

- Restore a deprecated alias for the '_must_decode' helper function, moved
  from 'pkginfo._compat.must_decode' to 'pkginfo.distribution._must_decode'
  in 1.90.

- Repair unit tests broken by dropping Python 2.7 classifier.

1.9.0 (2022-11-29)
------------------

- Drop support for Python 2.7.

- Switch to use 'pytest' vs. 'nose', which doesn't support Python > 3.9.

1.8.3 (2022-06-08)
------------------

- Specify supported Python versions in 'setup.py' using 'python_requires'.
  LP #1977981.

1.8.2 (2021-12-01)
------------------

- Add fix for installed distributions with '__package__' set to an empty
  string. LP #1952946.

1.8.1 (2021-11-19)
------------------

- Add 'MANIFEST.in' to ensure example files used by tests are included
  in source distributions.  LP #1951553.

1.8.0 (2021-11-18)
------------------

- Support new standard metadata location for installed dists. LP #1865286.
