@@ -1,5 +1,6 @@
 import io
 from email.parser import Parser
+import warnings
 
 def _must_decode(value):
     if type(value) is bytes:
@@ -87,6 +88,35 @@ HEADER_ATTRS = {
     '2.3': HEADER_ATTRS_2_3,
 }
 
+def _version_tuple(metadata_version):
+    if metadata_version is None:
+        return (0, 0)
+    return tuple(
+        [int(part) for part in metadata_version.split(".")]
+    )
+
+METADATA_VERSIONS = [
+    _version_tuple(key) for key in HEADER_ATTRS
+]
+
+MAX_METADATA_VERSION = max(METADATA_VERSIONS)
+MAX_METADATA_VERSION_STR = max(HEADER_ATTRS.keys())
+
+
+class UnknownMetadataVersion(UserWarning):
+    def __init__(self, metadata_version):
+        self.metadata_version = metadata_version
+        super().__init__(f"Unknown metadata version: {metadata_version}")
+
+
+class NewMetadataVersion(UserWarning):
+    def __init__(self, metadata_version):
+        self.metadata_version = metadata_version
+        super().__init__(
+            f"New metadata version ({metadata_version}) higher than "
+            f"latest supported version: parsing as {MAX_METADATA_VERSION_STR}"
+        )
+
 class Distribution(object):
     metadata_version = None
     # version 1.0
@@ -130,7 +160,22 @@ class Distribution(object):
         raise NotImplementedError
 
     def _getHeaderAttrs(self):
-        return HEADER_ATTRS.get(self.metadata_version, [])
+        found = HEADER_ATTRS.get(self.metadata_version)
+
+        if found is None:
+            try:
+                v_tuple = _version_tuple(self.metadata_version)
+            except ValueError:
+                warnings.warn(UnknownMetadataVersion(self.metadata_version))
+                return ()
+            if v_tuple > MAX_METADATA_VERSION:
+                warnings.warn(NewMetadataVersion(self.metadata_version))
+                return HEADER_ATTRS[MAX_METADATA_VERSION_STR]
+            else:
+                warnings.warn(UnknownMetadataVersion(self.metadata_version))
+                return ()
+
+        return found
 
     def parse(self, data):
         fp = io.StringIO(_must_decode(data))
