@@ -4,6 +4,10 @@
 1.11.0 (unreleased)
 -------------------
 
+- Emit warnings for distributions parsed with unknown metadata versions,
+  or metadata versions newer than highest supported version.
+  LP #2058697.
+
 - Improve exception message when failing to find a valid 'PKG-INFO' file
   within an 'sdist' archive.  LP #2064652.
 
